# flask-cognito-lib

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  codecov.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: cicd.yml  docs.yml  pipeline.yml
cognito/: index.html
config/: index.html
docs/: access-aws-resources.md  cognito.md  config.md  example.md  index.md
example/: .env.example  README.md  app.py  config.py  example_app.py  index.html  requirements.txt
search/: search_index.json
src/flask_cognito_lib/: __init__.py  config.py  decorators.py  exceptions.py  plugin.py  utils.py
src/flask_cognito_lib/services/: __init__.py  cognito_svc.py  token_svc.py
tests/: conftest.py  test_cognito_svc.py  test_config.py  test_decorators.py  test_flask_cognito_lib.py  test_plugin.py  test_services.py  test_token_service.py  test_token_svc.py  test_utils.py
