[project]
name = "flask_cognito_lib"
version = "1.9.5"
description = "A Flask extension that supports protecting routes with AWS Cognito following OAuth 2.1 best practices"
authors = [{ name = "mblackgeo", email = "18327836+mblackgeo@users.noreply.github.com" }]
requires-python = ">=3.8,<4.0,!=3.9.0,!=3.9.1"
readme = "README.md"
license = "MIT"
keywords = [
    "Flask",
    "Extension",
    "OAuth",
    "Cognito",
]
classifiers = [
    "Framework :: Flask",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "Flask>=2.0,<4.0",
    "requests~=2.0",
    "PyJWT[crypto]>=2.4,<3.0",
    "urllib3<3.0",
    "cryptography>=44.0.2,<45",
]

[project.urls]
Homepage = "https://github.com/mblackgeo/flask-cognito-lib"
Repository = "https://github.com/mblackgeo/flask-cognito-lib"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "mypy~=1.14",
    "typed-ast>=1.5.2,<2",
    "pylint>=3.2.7,<4",
    "types-requests>=2.27.13,<3",
    "pytest-mock>=3.7.0,<4",
    "pytest-cov>=5.0.0,<6",
    "python-dotenv>=1.0.1,<2",
    "mkdocs-material>=9.6.1,<10",
    "mdx-include>=1.4.1,<2",
    "python-semantic-release>=7.27.0,<8",
    "ruff>=0.14.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/flask_cognito_lib"]

[tool.hatch.build.targets.wheel]
include = ["src/flask_cognito_lib"]

[tool.hatch.build.targets.wheel.sources]
"src/flask_cognito_lib" = "flask_cognito_lib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["flask_cognito_lib"]

[tool.semantic_release]
version_variable = [
    "src/flask_cognito_lib/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
major_on_zero = false
branch = "main"
upload_to_repository = false
upload_to_release = true
build_command = "poetry build"
dist_path = "dist/"
changelog_file = "CHANGELOG.md"
patch_without_tag = false
